--- a/html/introduction-to-html/structuring-a-page-of-content-start/index.html
+++ b/html/introduction-to-html/structuring-a-page-of-content-start/index.html
@@ -28,11 +28,12 @@
     </header>
 
     <main>
-      <h2>欢迎</h2>
+      <article>
+        <h2>欢迎</h2>
 
-      <p>欢迎访问观鸟网虚拟站点。如果这是一个真实的网站，那么它就是观鸟爱好者的理想聚集地。无论你是一名期望学习观鸟知识的新手，还是一位希望分享体会、经验和图片的观鸟老手。</p>
-      <p>时不我待！赶快带齐装备，关上电脑，去拥抱美丽的大自然吧！</p>
-
+        <p>欢迎访问观鸟网虚拟站点。如果这是一个真实的网站，那么它就是观鸟爱好者的理想聚集地。无论你是一名期望学习观鸟知识的新手，还是一位希望分享体会、经验和图片的观鸟老手。</p>
+        <p>时不我待！赶快带齐装备，关上电脑，去拥抱美丽的大自然吧！</p>
+      </article> 
       <aside>
         <h2>收藏照片</h2>
 
