--- a/html/multimedia-and-embedding/video-and-audio-content/index.html
+++ b/html/multimedia-and-embedding/video-and-audio-content/index.html
@@ -12,7 +12,7 @@
             <source src="rabbit320.mp4" type="video/mp4">
             <source src="rabbit320.webm" type="video/webm">
             <p>你的浏览器不支持html5视频，可点击<a href="rabbit320.mp4">此链接</a>观看</p>
-            <track kind="descriptions" src="subtitle.vtt" srclang="en">
+            <track kind="subtitles" src="subtitle.vtt" srclang="en">
         </video>
     </body>
 </html>
