--- a/html/multimedia-and-embedding/my-responsive-image/index.html/index.html
+++ b/html/multimedia-and-embedding/my-responsive-image/index.html/index.html
@@ -4,10 +4,7 @@
         <title>my responsive image</title>
     </head>
     <body>
-        <picture>
-            <source media="(max-width: 2736px)" srcset="beam2.png">
-            <source media="(min-width: 2737px)" srcset="beam.png">
-            <img src="beam.png" alt="scenery after rain">
-        </picture>
+        <img srcset="beam1.png, beam2.png 1.5x"
+            src="beam2.png" alt="scenery after rain" width="320px">
     </body>
 </html>
