--- a/html/tables/basic/animals-table.html
+++ b/html/tables/basic/animals-table.html
@@ -10,23 +10,23 @@
 
     <table>
       <tr>
-        <th>动物</th>
+        <th colspan="2">动物</th>
       </tr>
       <tr>
-        <th>河马</th>
+        <th colspan="2">河马</th>
       </tr>
       <tr>
-        <th>马</th>
+        <th rowspan="2">马</th>
         <td>母马</td>
       </tr>
       <tr>
         <td>种马</td>
       </tr>
       <tr>
-        <th>鳄鱼</th>
+        <th colspan="2">鳄鱼</th>
       </tr>
       <tr>
-        <th>鸡</th>
+        <th rowspan="2">鸡</th>
         <td>母鸡</td>
       </tr>
       <tr>
