--- a/html/tables/basic/dogs-table.html
+++ b/html/tables/basic/dogs-table.html
@@ -24,21 +24,21 @@
         <td>可卡犬</td>
       </tr>
       <tr>
-        <td>年龄</td>
+        <th>年龄</th>
         <td>16</td>
         <td>9</td>
         <td>10</td>
         <td>5</td>
       </tr>
       <tr>
-        <td>主人</td>
+        <th>主人</th>
         <td>岳母</td>
         <td>我</td>
         <td>我</td>
         <td>表妹</td>
       </tr>
       <tr>
-        <td>饮食习性</td>
+        <th>饮食习性</th>
         <td>爱吃剩菜剩饭</td>
         <td>细嚼慢咽</td>
         <td>大胃王</td>
