--- a/html/tables/basic/timetable.html
+++ b/html/tables/basic/timetable.html
@@ -33,6 +33,14 @@
     <h1>课程表</h1>
 
     <table>
+      <colgroup>
+        <col span="2">
+        <col style="background-color:#97DB9A;">
+        <col style="width: 42px;">
+        <col style="background-color:#97DB9A;">
+        <col style="background-color:#DCC48E;border:4px solid #C1437A;">
+        <col style="width: 42px;" span="2">
+      </colgroup>
       <tr>
         <td>&nbsp;</td>
         <th>星期一</th>
