--- a/html/tables/advanced/spending-record.html
+++ b/html/tables/advanced/spending-record.html
@@ -11,7 +11,8 @@
     <h1>我的支出记录</h1>
 
       <table>
-        <caption>我的消费习惯</caption>
+        <thead>我的消费习惯</thead>
+        <tbody>
           <tr>
             <th>购买</th>
             <th>地点</th>
@@ -19,10 +20,7 @@
             <th>评价</th>
             <th>花费（人民币）</th>
           </tr>
-          <tr>
-            <td>合计</td>
-            <td>118</td>
-          </tr>
+
           <tr>
             <td>理发</td>
             <td>理发店</td>
@@ -51,6 +49,11 @@
             <td>不错</td>
             <td>5</td>
           </tr>
+        </tbody>
+        <tfoot>
+          <td>合计</td>
+          <td>118</td>
+        </tfoot>
     </table>
 
   </body>
