--- a/html/tables/advanced/spending-record.html
+++ b/html/tables/advanced/spending-record.html
@@ -5,6 +5,14 @@
     <title>My spending record</title>
     <link href="minimal-table.css" rel="stylesheet" type="text/css">
     <style>
+      tbody {
+        font-size: 90%;
+        font-style: italic;
+      }
+
+      tfoot {
+        font-weight: bold;
+      }
     </style>
   </head>
   <body>
@@ -51,7 +59,7 @@
           </tr>
         </tbody>
         <tfoot>
-          <td>合计</td>
+          <td colspan="4">合计</td>
           <td>118</td>
         </tfoot>
     </table>
