--- a/html/tables/advanced/items-sold.html
+++ b/html/tables/advanced/items-sold.html
@@ -16,23 +16,23 @@
           <tr>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <th colspan="3">服装</th>
-            <th colspan="2">饰物</th>
+            <th colspan="3" scope="colgroup">服装</th>
+            <th colspan="2" scope="colgroup">饰物</th>
           </tr>
           <tr>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
-            <th>长裤</th>
-            <th>裙装</th>
-            <th>套装</th>
-            <th>手镯</th>
-            <th>戒指</th>
+            <th scope="col">长裤</th>
+            <th scope="col">裙装</th>
+            <th scope="col">套装</th>
+            <th scope="col">手镯</th>
+            <th scope="col">戒指</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <th rowspan="3">比利时</th>
-            <th>安特卫普</th>
+            <th rowspan="3" scope="rowgroup">比利时</th>
+            <th scope="row">安特卫普</th>
             <td>56</td>
             <td>22</td>
             <td>43</td>
@@ -40,7 +40,7 @@
             <td>23</td>
           </tr>
           <tr>
-            <th>根特</th>
+            <th scope="row">根特</th>
             <td>46</td>
             <td>18</td>
             <td>50</td>
@@ -48,7 +48,7 @@
             <td>15</td>
          </tr>
          <tr>
-           <th>布鲁塞尔</th>
+           <th scope="row">布鲁塞尔</th>
            <td>51</td>
            <td>27</td>
            <td>38</td>
@@ -56,8 +56,8 @@
            <td>28</td>
          </tr>
          <tr>
-           <th rowspan="2">荷兰</th>
-           <th>阿姆斯特丹</th>
+           <th rowspan="2" scope="rowgroup">荷兰</th>
+           <th scope="row">阿姆斯特丹</th>
            <td>89</td>
            <td>34</td>
            <td>69</td>
@@ -65,7 +65,7 @@
            <td>38</td>
          </tr>
          <tr>
-           <th>乌得勒支</th>
+           <th scope="row">乌得勒支</th>
            <td>80</td>
            <td>12</td>
            <td>43</td>
