--- a/html/tables/assessment-start/blank-template.html
+++ b/html/tables/assessment-start/blank-template.html
@@ -81,7 +81,7 @@
         <tr>
           <th scope="rowgroup" rowspan="4">类木行星</th>
           <th scope="rowgroup" rowspan="2">气巨星</th>
-          <td>木星</td>
+          <th scope="row">木星</th>
           <td>1898</td>
           <td>142,984</td>
           <td>1326</td>
@@ -93,7 +93,7 @@
           <td>太阳系最大</td>
         </tr>
         <tr>
-          <td>土星</td>
+          <th scope="row">土星</th>
           <td>568</td>
           <td>120,536</td>
           <td>687</td>
@@ -106,7 +106,7 @@
         </tr>
         <tr>
           <th scope="rowgroup" rowspan="2">冰巨星</th>
-          <td>天王星</td>
+          <th scope="row">天王星</th>
           <td>86.8</td>
           <td>51,118</td>
           <td>1271</td>
@@ -118,7 +118,7 @@
           <td></td>
         </tr>
         <tr>
-          <td>海王星</td>
+          <th scope="row">海王星</th>
           <td>102</td>
           <td>49,528</td>
           <td>1638</td>
@@ -130,8 +130,8 @@
           <td></td>
         </tr>
         <tr>
-          <th scope="row">矮行星*</th>
-          <td>冥王星</td>
+          <th scope="rowgroup" colspan="2">矮行星*</th>
+          <th scope="row">冥王星</th>
           <td>0.0146</td>
           <td>2,370</td>
           <td>2095</td>
